// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchInputs saga should dispatch the loadInputsSuccess action if it calls API successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:3001/inputs",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`fetchInputs saga should dispatch the loadMessagesError if the API call errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:3001/inputs",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`sendInputs saga should dispatch the sendNewMessageError action if the API errors 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`sendInputs saga should dispatch the sendNewMessageError action if the API errors 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:3001/inputs",
      Object {
        "body": "{\\"input\\":\\"message\\"}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`sendInputs saga should dispatch the sendNewMessageSuccess action if it posts to the API successfully 1`] = `
Object {
  "@@redux-saga/IO": true,
  "SELECT": Object {
    "args": Array [],
    "selector": [Function],
  },
}
`;

exports[`sendInputs saga should dispatch the sendNewMessageSuccess action if it posts to the API successfully 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://localhost:3001/inputs",
      Object {
        "body": "{\\"input\\":\\"message\\"}",
        "headers": Object {
          "Content-Type": "application/json",
        },
        "method": "POST",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
